# ain

./: .appveyor.yml  .cirrus.yml  .dockerignore  .gitignore  .lift.toml  .travis.yml  CONTRIBUTING.md  COPYING  Cargo.toml  INSTALL.md  LICENSE  Makefile.am  README.m  README.md  SECURITY  SECURITY.md  autogen.sh  configure.ac  defi-cli  libbitcoinconsensus.pc.in  libdeficonsensus.pc.in  make.sh  masternodes.md  out.txt  rust-toolchain.toml  script.sh
doc/man/: Makefile.am  bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-wallet.1  defi-cli.1  defi-qt.1  defi-tx.1  defi-wallet.1  defid.1
lib/: .rustc_info.json  Cargo.toml  Makefile  Makefile.am  makefile.mk
lib/.cargo/: config.toml
lib/ain-contracts/: Cargo.toml  build.rs
lib/ain-cpp-imports/: Cargo.toml  build.rs
lib/ain-db/: Cargo.toml
lib/ain-dftx/: Cargo.toml
lib/ain-evm/: .gitignore  Cargo.toml  amount.rs  genesis.json
lib/ain-ffi/: Cargo.toml  Makefile
lib/ain-grpc/: Cargo.toml  Makefile  build.rs
lib/ain-macros/: Cargo.toml
lib/ain-ocean/: Cargo.toml
lib/ain-rs/: Cargo.toml  Makefile
lib/ain-rs-exports/: Cargo.toml  build.rs
lib/cli/: Cargo.toml  README.md
lib/contracts/: Cargo.toml
lib/dst20/: ERC20.sol  abi.json
lib/exp-ain-grpc2/: Cargo.toml  build.rs
lib/labs-dfeye/: Cargo.toml
lib/labs-grpc2/: Cargo.toml  build.rs
lib/makefiles/: base.mk  tools.mk
lib/parser/: Cargo.toml
src/: .clang-format  DMCHandler.cpp  DMCHandler.h  Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind.cpp  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  (+134 more)
src/bench/: .gitignore  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  bench_defi.cpp  block_assemble.cpp  ccoins_caching.cpp  chacha20.cpp  chacha_poly_aead.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  data.cpp  data.h  duplicate_inputs.cpp  examples.cpp  gcs_filter.cpp  lockedpool.cpp  mempool_eviction.cpp  merkle_root.cpp  poly1305.cpp  prevector.cpp  rollingbloom.cpp  rpc_blockchain.cpp  rpc_mempool.cpp  util_time.cpp  verify_script.cpp  wallet_balance.cpp
src/compat/: assumptions.h  byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha_poly_aead.cpp  chacha_poly_aead.h  common.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  poly1305.cpp  poly1305.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_shani.cpp  sha256_sse4.cpp  sha3.cpp  sha3.h  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/dfi/: accounts.cpp  accounts.h  accountshistory.cpp  accountshistory.h  anchors.cpp  anchors.h  auctionhistory.cpp  auctionhistory.h  balances.h  coinselect.h  communityaccounttypes.h  customtx.cpp  customtx.h  errors.h  evm.cpp  evm.h  factory.h  gv.cpp  gv.h  historywriter.cpp  historywriter.h  icxorder.cpp  icxorder.h  incentivefunding.cpp  incentivefunding.h  loan.cpp  loan.h  masternodes.cpp  masternodes.h  mn_checks.cpp  mn_checks.h  mn_rpc.cpp  mn_rpc.h  oracles.cpp  oracles.h  poolpairs.cpp  poolpairs.h  proposals.cpp  proposals.h  res.h  (+27 more)
src/evm/: Makefile  sputnikvm.h
src/ffi/: cxx.h  ffiexports.cpp  ffiexports.h  ffihelpers.h  ffiocean.cpp  ffiocean.h
src/grpc/: blockchain.cpp  blockchain.h  mining.cpp  mining.h  util.cpp  util.h  wallet.cpp  wallet.h
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  txindex.cpp  txindex.h
src/interfaces/: README.md  chain.cpp  chain.h  handler.cpp  handler.h  node.cpp  node.h  wallet.cpp  wallet.h
src/masternodes/: .clang-format  accounts.cpp  accounts.h  accountshistory.cpp  accountshistory.h  anchors.cpp  anchors.h  auctionhistory.cpp  auctionhistory.h  balances.h  changiintermediates.cpp  changiintermediates.h  coinselect.h  communityaccounttypes.h  criminals.cpp  criminals.h  customtx.cpp  customtx.h  errors.h  evm.cpp  evm.h  evm_ffi.cpp  evm_ffi.h  factory.h  ffi_exports.cpp  ffi_temp_stub.h  funding.cpp  funding.h  futureswap.cpp  futureswap.h  gv.cpp  gv.h  historywriter.cpp  historywriter.h  icxorder.cpp  icxorder.h  incentivefunding.cpp  incentivefunding.h  loan.cpp  loan.h  (+57 more)
src/node/: README.md  coin.cpp  coin.h  coinstats.cpp  coinstats.h  psbt.cpp  psbt.h  transaction.cpp  transaction.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h  settings.cpp  settings.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.h  bitcoin.qrc  bitcoin_locale.qrc  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  defi.cpp  defi.h  defiaddressvalidator.cpp  defiaddressvalidator.h  defiamountfield.cpp  defiamountfield.h  defigui.cpp  defigui.h  defiunits.cpp  defiunits.h  editaddressdialog.cpp  editaddressdialog.h  (+85 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  libain_wrapper.cpp  libain_wrapper.h  libain_wrapper.hpp  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  util.h  (+13 more)
(+2572 files in other folders)
