[workspace]
members = [
    "ain-*",
    "cli",
    "labs-grpc2",
]

default-members = [
    "ain-*",
]

resolver = "2"

[profile.release]
lto = true

[patch.crates-io]
vsdb = { git = 'https://github.com/defich/vsdb.git' }
vsdbsled = { git = 'https://github.com/defich/vsdbsled.git' }
ethereum = { git = 'https://github.com/defich/ethereum.git' }

[workspace.dependencies]

## lang

anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
rand = "0.8"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1", features = ["rt-multi-thread"] }
once_cell = "1.17"

## crypto

libsecp256k1 = "0.7"
ripemd = { version = "0.1", default-features = false }
sha3 = "0.10"

## common

num = { version = "0.4", default-features = false, features = ["alloc"] }

hex = "0.4"
hex-literal = "0.4"
bincode = "1.3"

### eth

ethereum = "0.14"
ethereum-types = "0.14"
keccak-hash = "0.10"
primitive-types = { version = "0.12", default-features = false, features = ["serde"] }
rlp = "0.5"


### ain-evm
evm = { version = "0.39", default-features = false, features = ["with-serde"] }
ethbloom = "0.13"
statrs = "0.16"
rustc-hex = "2.1"

#### Trie dependencies
hash-db = "0.16"
sp-core = "22.0"
vsdb_trie_db = { version = "0.7", git = "https://github.com/defich/vsdb.git", features = ["rocks_engine"] }
vsdb_core = { version = "0.55", git = "https://github.com/defich/vsdb.git", features = ["rocks_engine", "compress"] }
vsdbsled = { git = "https://github.com/defich/vsdbsled.git" }

#### Runtime dependencies
jsonrpsee-core = "0.16"
jsonrpsee-server = "0.16"
jsonrpsee-types = "0.16"

#### Cache dependencies
lru = "0.11"

#### Precompile dependencies
sp-io = "24.0"
substrate-bn = "0.6"

#### Database dependencies
rocksdb = { version = "0.20", default-features = false }

### ain-cpp-imports

cxx = "1.0"

## build-deps

### common

### ain-cpp-imports

cxx-build = "1.0"

### ain-rs-exports

cxx-gen = "0.7"
proc-macro2 = "1.0"

### ain-evm

tempdir = "0.3"

### ain-contracts

ethers = "2.0"
ethers-solc = "2.0"