[workspace]
members = [
    "ain-*",
    "cli",
    "labs-grpc2",
]

default-members = [
    "ain-*",
]

resolver = "2"

[profile.release]
lto = true

[patch.crates-io]
vsdb = { git = "https://github.com/defich/vsdb.git" }
vsdbsled = { git = "https://github.com/defich/vsdbsled.git" }
ethereum = { git = "https://github.com/defich/ethereum.git" }
evm = { git = "https://github.com/defich/evm.git" }
evm-runtime = { git = "https://github.com/defich/evm.git" }
bitcoin = { git = "https://github.com/defich/rust-bitcoin.git" }
bitcoin-io = { git = "https://github.com/defich/rust-bitcoin.git" }

[workspace.dependencies]

## lang

log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
once_cell = "1.17"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1", features = ["rt-multi-thread"] }
async-trait = "0.1"
regex = "1.5"

## build

proc-macro2 = "1.0"
cxx = "1.0"
cxx-build = "1.0"
cxx-gen = "0.7"
tonic = "0.9"
tonic-build = "0.9"
prost = "0.11"
prost-build = "0.11"

quote = "1.0"
syn = { version = "2.0", default-features = false, features = ["parsing", "printing"] }
prettyplease = "0.2.4"

## crypto

libsecp256k1 = "0.7"
ripemd = { version = "0.1", default-features = false }
sha3 = "0.10"

## common

num = { version = "0.4", default-features = false, features = ["alloc"] }
num-traits = "0.2"
num_cpus = "1.0"

hex = "0.4"
hex-literal = "0.4"
bincode = "1.3"
serde_with = "3.0"
heck = "0.4"
tower-http = { version = "0.4.0", features = ["full"] }
tower = "0.4.13"
hyper = "0.14.20"

jsonrpsee = { version = "0.16", features = ["server", "macros", "http-client"] }
jsonrpsee-core = "0.16"
jsonrpsee-server = "0.16"
jsonrpsee-types = "0.16"

tempdir = "0.3"

rocksdb = { version = "0.21", default-features = false }
statrs = "0.16"
rustc-hex = "2.1"
rustc_version_runtime = "0.2.1"
parking_lot = "0.12.1"
spin = "0.9.8"
rayon = "1.8.0"

bitcoin = "0.31"

### eth

evm = { version = "0.39", default-features = false, features = ["with-serde", "tracing"] }
evm-runtime = "0.39.0"

ethereum = { git = "https://github.com/defich/ethereum.git" }
ethereum-types = "0.14"
keccak-hash = "0.10"
rlp = "0.5"
ethers-solc = "2.0"
ethbloom = "0.13"
ethabi = "18.0.0"

### ain-evm

#### Trie dependencies
hash-db = "0.16"
sp-core = "22.0"
vsdb_trie_db = { version = "0.7", git = "https://github.com/defich/vsdb.git", features = ["rocks_engine"] }
vsdb_core = { version = "0.55", git = "https://github.com/defich/vsdb.git", features = ["rocks_engine", "compress"] }

#### Cache dependencies
lru = "0.12"

#### Precompile dependencies
sp-io = "24.0"
substrate-bn = "0.6"

### Local crates
ain-cpp-imports = { path = "./ain-cpp-imports" }
ain-db = { path = "./ain-db" }
ain-macros = { path = "./ain-macros" }
ain-dftx = { path = "./ain-dftx" }
